--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,9 @@
+body {
+    margin: 0 auto;
+    text-align: center;
+    height: 100px;
+}
+
 .top {
     padding: 0 5rem;
     margin: 0 5rem;
@@ -31,4 +37,21 @@
 
 .navbar-brand:hover {
     color: #BFB3FF;
+}
+
+.email-container {
+    margin: 0 auto;
+    width: 30rem;
+    text-align: center;
+}
+
+.nessler-container {
+    margin: 0 auto;
+    width: 600px;
+    text-align: center;
+}
+
+.mybtn {
+    margin: 2rem;
+    background-color: #7952b3
 }
